2011-06-09  Karl Berry  <karl@tug.org>

	* mktexlsr: write directory args to a file and read them back,
	so we can support spaces (though not newlines) in the directory names.
	Reword some error messages.

2011-06-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* hash.c: leave original letter cases also on win32.

2011-06-06  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXINPUTS.context): No trailing comma, per Taco.

2011-06-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.c (normalize_filename): Use memmove() instead of
	memcpy() for overlapping objects.

2011-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmf.cnf: add "shell_escape.initex = f" and
	"parse_first_line.initex = f", since we have initex in TL 2011.
	Otherwise the banner of initex is "This is TeXk, ..."

2011-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* extend-fname.c: Remove the `generic const warning'.
	* readable.c, rm-suffix.c: Adjust the `generic const warning'.

2011-05-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* db.c (kpathsea_db_search): Add `free (dir_part)'.
	(kpathsea_db_search{,_list}): Declare a few strings as const.
	(kpathsea_db_insert): Use pointer arith to avoid const warning.

2011-05-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add the new cnf-to-paths.awk script.

2011-05-24  Karl Berry  <karl@tug.org>

	* tex-file.c (TRUETYPE_SUFFIXES): add .dfont.
	Request from Dohyun Kim, 23 May 2011 16:09:03.
	* doc/kpathsea.texi (Supported file formats): mention it.

2011-05-23  Karl Berry  <karl@tug.org>

	* cnf-to-paths.awk: new awk script.
	* Makefile.am (stamp-paths): use it instead of the inline sed.
	Also, change the generated paths.h so that all non-SELFAUTO paths
	become a constant string "/nonesuch".  That way, if the definitions
	change, the binaries don't all uselessly change with them.

2011-05-22  Karl Berry  <karl@tug.org>

	* texmf.cnf: doc fixes.

2011-05-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
